# ShowMeTheButton

./: .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  DEMO_CHEATSHEET.md  README.md  SPEC.md  start-demo.sh
.trae/plans/: frontend-sdk-plan.md
angular-demo/: angular.json  package-lock.json  package.json
angular-demo/src/: styles.scss
demo-backend/: README.md  main.py  requirements.txt
demo-backend/api/: __init__.py
docker/: Dockerfile.angular  Dockerfile.python  docker-compose.yml  nginx.conf
docs/: FUTURE_MINIMAX_TTS.md  README.md
docs/button-hell/: btn-add-new.md  btn-delete-selected.md  btn-edit.md  btn-export.md  btn-generate.md  btn-refresh.md  pagination.md
docs/complex-form/: btn-add-field.md  btn-auto-fill.md  btn-reset.md  btn-save-draft.md  (+1 more)
examples/: component-registry.json
knowledge-base/: README.md
show-me-agent/: README.md  main.py  requirements.txt
show-me-agent-sdk/: README.md
show-me-sdk/: PUBLISH_GUIDE.md  README.md
workflow-extractor/: README.md  pyproject.toml
workflow-extractor/docs/: workflow-draft-v1.md
workflow-extractor/scripts/: demo_video_to_workflow.py  sop_to_workflow.py
workflow-extractor/skills/demo-video-to-workflow/: SKILL.md
workflow-extractor/skills/sop-to-workflow/: SKILL.md
workflow-extractor/tests/: test_demo_video_to_workflow.py  test_sop_to_workflow.py
workflow-extractor/workflow_extractor/: __init__.py  cli_demo_video.py  cli_sop.py  component_matcher.py  demo_video_extractor.py  extractor.py  validator.py
workflow-extractor/workflow_extractor/schemas/: workflow-draft-v1.schema.json
(+95 files in other folders)
